--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/admin-permission.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/admin-permission.html
@@ -24,13 +24,7 @@
 <body>
     <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 管理员管理 <span class="c-gray en">&gt;</span> 权限管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新"><i class="Hui-iconfont">&#xe68f;</i></a></nav>
     <div class="page-container">
-        <div class="text-c">
-            <form class="Huiform" method="post" action="" target="_self">
-                <input type="text" class="input-text" style="width:250px" placeholder="权限名称" id="" name="">
-                <button type="submit" class="btn btn-success" id="" name=""><i class="Hui-iconfont">&#xe665;</i> 搜权限节点</button>
-            </form>
-        </div>
-        <div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a href="javascript:;" onclick="permission_add()" class="btn btn-primary radius"><i class="Hui-iconfont">&#xe600;</i> 添加权限节点</a></span> <span class="r">共有数据：<strong>54</strong> 条</span> </div>
+        <div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a href="javascript:;" onclick="permission_add()" class="btn btn-primary radius"><i class="Hui-iconfont">&#xe600;</i> 添加权限节点</a></span></div>
         <table class="table table-border table-bordered table-bg" id="tab">
             <thead>
                 <tr>
@@ -72,7 +66,7 @@
                             + '<td>' + data.Permission_Name + '</td>'
                             + '<td>' + data.Permission_Url + '</td>'
                             + '<td>' + data.Permission_Enabel + '</td>'
-                            + '<td>' + data.Permission_Remark + '</td>'
+                            + '<td>' + (data.Permission_Remark == null ? "无" : data.Permission_Remark)+ '</td>'
                             + '<td class="td-manage"><a style="text-decoration:none" onClick="admin_stop(this,"10001")" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a><a title="删除" href="javascript:;" onclick="Del(this,' + data.Permission_ID + ')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>'
                             + '</tr></tbody>';
                         $("#tab").append(tr);
