--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/index.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/index.html
@@ -45,8 +45,8 @@
                             <a href="#" class="dropDown_A">admin <i class="Hui-iconfont">&#xe6d5;</i></a>
                             <ul class="dropDown-menu menu radius box-shadow">
                                 <li><a href="javascript:;" onClick="myselfinfo()">个人信息</a></li>
-                                <li><a href="#">切换账户</a></li>
-                                <li><a href="#" onclick="aa()">退出</a></li>
+                                <li><a href="#" onclick="Skip()">切换账户</a></li>
+                                <li><a href="#" onclick="Skip()">退出</a></li>
                             </ul>
                         </li>
                         <li id="Hui-msg"> <a href="#" title="消息"><span class="badge badge-danger">1</span><i class="Hui-iconfont" style="font-size:18px">&#xe68a;</i></a> </li>
@@ -340,6 +340,11 @@
             _ww = weekday[d.getDay()];
             obj.html(_yy + "年" + _mm + "月" + _dd + "日 " + _ww);
         };
+
+        function Skip() {
+            location.href = 'login.html';
+        }
+
         $(function () {
             var id = this.location.search.substr(this.location.search.indexOf('=') + 1);
             $.ajax({
