--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/publishHouse.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/publishHouse.html
@@ -25,9 +25,9 @@
     <title>管理员列表</title>
 </head>
 <body>
-    <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 管理员管理 <span class="c-gray en">&gt;</span> 管理员列表 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新"><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+    <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 发布房源管理 <span class="c-gray en">&gt;</span> 发布房源列表 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新"><i class="Hui-iconfont">&#xe68f;</i></a></nav>
     <div class="page-container">
-        <div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a href="javascript:;" onclick="add()" class="btn btn-primary radius"><i class="Hui-iconfont">&#xe600;</i> 添加管理员</a></span></div>
+        <div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> </span></div>
         <table class="table table-border table-bordered table-bg" id="tab1">
             <thead>
                 <tr>
@@ -41,6 +41,7 @@
                     <th>面积</th>
                     <th>起租开始日期</th>
                     <th>起租结束日期</th>
+                    <th>上传</th>
                     <th>操作</th>
                 </tr>
             </thead>
@@ -72,11 +73,12 @@
                             + '<tr class="text-c" >'
                             + '<td><input type = "checkbox" value = "3" name = "" ></td>'
                             + '<td>' + data.Orientation_ID + '</td>'
-                            + '<td>' + data.Style_Name + '</td>'
-                            + '<td>' + data.LeaseType_ID + '</td>'
+                            + '<td>' + data.Style_ID + '</td>'
+                            + '<td>' + data.BuildingType_ID + '</td>'
                             + '<td>' + data.PublishHouse_Area + '</td>'
                             + '<td>' + data.PublishHouse_RentTimeBegin + '</td>'
                             + '<td>' + data.PublishHouse_RentTimeEnd + '</td>'
+                            + '<td><a href="#" onclick="TiaoZhuan(' + data.PublishHouse_ID+')" >上传</a></td>'
                             + '<td class="td-manage"><a style="text-decoration:none" onClick="admin_stop(this,"10001")" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a><a title="删除" href="javascript:;" onclick="DelAdmin(' + data.Admin_ID + ')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>'
                             + '</tr></tbody>';
                         $("#tab1").append(tr);
@@ -103,6 +105,10 @@
         }
         function add() {
             location.href = "/H-ui.admin/admin-add.html";
+        }
+
+        function TiaoZhuan(id) {
+            location.href = "/H-ui.admin/product-add.html?id="+id;
         }
 
     </script>
