--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/product-brand.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/product-brand.html
@@ -76,8 +76,8 @@
                             + ' <td><img src="../Content/img/' + data.House_ImgUrl + '" width="70" height="60"></td>'
                             + ' <td class="text-l">' + data.Region_ID + '</td>'
                             + '<td>' + data.House_Address + '</td>'
-                            + '<td class="td-status" >' + data.House_IsEnable + '</td >'
-                            + ' <td class="f-14 product-brand-manage"><a style="text-decoration:none" onClick="admin_stop(this," 10001")" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a>&nbsp;&nbsp;<a style="text-decoration:none" onClick="" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="del_House(this,' + data.House_ID + ')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>'
+                            + '<td class="td-status" >' + ((data.House_IsEnable == 0) ? "否" : "是") + '</td >'
+                            + ' <td class="f-14 product-brand-manage"><a style="text-decoration:none" onClick="admin_stop(this," 10001")" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a>&nbsp;&nbsp;<a style="text-decoration:none" onClick="Skip(' + data.House_ID + ')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="del_House(this,' + data.House_ID + ')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>'
                             + ' </tr></tbody >';
                         $("#tab").append(tr);
 
@@ -86,7 +86,9 @@
                 }
             })
         }
-
+        function Skip(id) {
+            location.href = 'UpdateEnable.html?houseId=' + id;
+        }
             
         function del_House(obj, id) {
             layer.confirm('确认要删除吗？', function (index) {
@@ -104,24 +106,6 @@
                 });
             });
         }
-
-        ////批量删除
-        //function delAllProduct() {
-        //    if (!confirm("确定要删除选中的吗？")) {
-        //        return;
-        //    }
-        //    var cks = document.getElementsByName("check");
-        //    var str = "";
-        //    //拼接所有的图书id
-        //    for (var i = 0; i < cks.length; i++) {
-        //        if (cks[i].checked) {
-        //            str += "House_ID=" + cks[i].value + "&";
-        //        }
-        //    }
-        //    //去掉字符串末尾的‘&'
-        //    str = str.substring(0, str.length - 1);           
-        //}
-
   
     </script>
 </body>
