--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/product-brand.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/product-brand.html
@@ -77,17 +77,26 @@
                             + ' <td class="text-l">' + data.Region_ID + '</td>'
                             + '<td>' + data.House_Address + '</td>'
                             + '<td class="td-status" >' + ((data.House_IsEnable == 0) ? "否" : "是") + '</td >'
-                            + ' <td class="f-14 product-brand-manage"><a style="text-decoration:none" onClick="admin_stop(this," 10001")" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a>&nbsp;&nbsp;<a style="text-decoration:none" onClick="Skip(' + data.House_ID + ')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="del_House(this,' + data.House_ID + ')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>'
+                            + ' <td class="f-14 product-brand-manage"><a style="text-decoration:none" onClick="Skip(' + data.House_ID + ',' + (data.House_IsEnable == 0 ? 1 : 0) + ')" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a>&nbsp;&nbsp;<a style="text-decoration:none" class="ml-5" onClick="del_House(this,' + data.House_ID + ')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>'
                             + ' </tr></tbody >';
                         $("#tab").append(tr);
-
                     })
                     $("#s1").append("<strong>" + data.length + "条</strong>");
                 }
             })
         }
-        function Skip(id) {
-            location.href = 'UpdateEnable.html?houseId=' + id;
+        function Skip(id,enable) {
+            $.ajax({
+                url: "http://localhost:8092/Dwelling/updateHouseIsEnable",
+                type: "get",
+                data: {
+                    id: id,
+                    House_IsEnable: enable,
+                },
+                success: function (data) {
+                    location.href = 'product-brand.html';
+                }
+            })
         }
             
         function del_House(obj, id) {
