--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/login.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/login.html
@@ -23,13 +23,13 @@
                 <div class="row cl">
                     <label class="form-label col-xs-3"><i class="Hui-iconfont">&#xe60d;</i></label>
                     <div class="formControls col-xs-8">
-                        <input id="name" name="Admin_Name" type="text" placeholder="账户" class="input-text size-L">
+                        <input id="name" value="admin" name="Admin_Name" type="text" placeholder="账户" class="input-text size-L">
                     </div>
                 </div>
                 <div class="row cl">
                     <label class="form-label col-xs-3"><i class="Hui-iconfont">&#xe60e;</i></label>
                     <div class="formControls col-xs-8">
-                        <input id="" name="Admin_Password" type="password" placeholder="密码" class="input-text size-L">
+                        <input id="" value="946946" name="Admin_Password" type="password" placeholder="密码" class="input-text size-L">
                     </div>
                 </div>
                 <!--<div class="row cl">
